# featex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  Makefile  README.md  UV_SETUP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.rst  conf.py  index.rst  quickstart.rst
docs/guides/: feature_engineering.rst  pit_datasets.rst
examples/: README.md  basic_workflow.py
featex/: __init__.py  features.py  pit.py  py.typed  utils.py
tests/: __init__.py  test_features.py  test_pit.py
