[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featex"
version = "0.1.0"
description = "Feature engineering library for building point-in-time datasets"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vinushan Selvaraj", email = "vinushan37@gmail.com"}
]
keywords = ["feature-engineering", "point-in-time", "machine-learning", "datasets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.14"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/Vinushan/featex"
Documentation = "https://featex.readthedocs.io"
Repository = "https://github.com/Vinushan/featex"
Issues = "https://github.com/Vinushan/featex/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.10",
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.18",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.10",
    "flake8>=4.0",
    "mypy>=0.950",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.18",
]
